--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "basic-info-site-node",
   "version": "1.0.0",
   "description": "A basic informational page created using Node.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch app.js"
   },
   "author": "",
   "license": "ISC",
